2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>

	* pccam300.c: Fix includes so that the thing compiles.

2003-01-20  Till Adam  <till@adam-lilienthal.de>

	* initial import